# elaspic

./: .binstar.yml  .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README  README.md  README.rst  conftest.py  create_local_python_environment.txt  database_tables_legacy.py  database_tests.py  elaspic.py  environment.yml  environment_py2.yml  environment_py3.yml  environment_rtd.yml  gitlab-ci.sh  meta.yaml  readthedocs.yml  requirements.txt  requirements_conda_pip.txt  requirements_conda_py2.txt  requirements_conda_py3.txt  requirements_dev.txt  requirements_virtualenv_py2.txt  requirements_virtualenv_py3.txt  setup.cfg  setup.py  wercker.yml
bin.bak/: FoldX.linux64  cd-hit  libfaketime.so.1  ml_clf_core_p0.pickle  ml_clf_core_p0.pickle.py27  ml_clf_core_p1.pickle  ml_clf_core_p1.pickle.py27  ml_clf_interface_p1.pickle  ml_clf_interface_p1.pickle.py27  ml_features_core_p0.pickle  ml_features_core_p0.pickle.py27  ml_features_core_p1.pickle.py27  ml_features_interface_p0.pickle.py27  ml_features_interface_p1.pickle  ml_features_interface_p1.pickle.py27  pops
code/: .directory  HelperFunction_prepareModeller.py  __init__.py  analyze_structure.py  build_database.py  call_foldx.py  call_modeller.py  call_tcoffee.py  class_analyze_structure.py  class_callTcoffee.py  class_domain_model.py  class_domain_mutation.py  class_domain_template.py  class_error.py  class_foldX.py  class_get_uniprot_template_core_and_interface.py  class_interfaceSize.py  class_modeller.py  class_multi.py  class_pdbTemplate-ASmod.py  class_pdbTemplate.py  class_pysicoChemicalProperties.py  class_sql.py  combine-folders.sh  configFile.ini  configFileAS.ini  disease_read_calculation_output.py  domain_alignment.py  domain_model.py  domain_mutation.py  domain_template.py  elaspic.py  errors.py  helper_functions.py  parse_pfamscan.py  pdb_template.py  physicochemical_properties.py  pipeline.py  pipeline_multi.py  protein_interaction_database.pickle.REMOVED.git-id  (+4 more)
code_supl/: .spyderproject  parse_mmcif.py  parse_pfamscan.py  split_log_by_consumer.py
config/: config_centos.ini  config_file.ini  config_file_mysql.ini.gpg  config_file_mysql_test.ini.gpg  config_file_postgresql.ini.gpg  config_file_postgresql_test.ini.gpg  config_file_sqlite.ini.gpg  config_file_sqlite_test.ini.gpg  config_file_training.ini  config_ubuntu.ini
db/: domain_contact.txt.REMOVED.git-id  pipeline.db.REMOVED.git-id  pipeline.db.backup.REMOVED.git-id  pipeline.db.bakup.recent.REMOVED.git-id  uniprot_domain.txt  uniprot_domain_pair.txt
docs/: INDEX.md  Makefile  alignments.md  background.md  benchmarks.rst  code.rst  conf.py  config_file.rst  configuration.rst  database.rst  database_schema.rst  download_data.rst  elaspic.rst  elaspic_cli.rst  elaspic_cli.rst.bak  elaspic_database_cli.rst  features.md  getting_started.rst  import_precalculated.rst  index.md  index.rst  install_elaspic.rst  install_externals.rst  install_python.rst  install_required_binaries_script.rst  installation.rst  installation_guide.rst  introduction.rst  make.bat  modules.rst  (+5 more)
(+508 files in other folders)
