[bumpversion]
files = devtools/conda-recipe/meta.yaml setup.py docs/conf.py elaspic/__init__.py
current_version = 0.2.0
commit = True
tag = False
message = "Release {new_version}"
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize =
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
values =
	dev
	gamma

[aliases]
test = pytest

[tool:pytest]
addopts =
	-sx -vv --cov=elaspic --ignore=setup.py
	--ignore=tests/test_standalone_pipeline.py
	--ignore=tests/test_database_pipeline.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[flake8]
; ignore = D100,D101,D102,D103,D105,E402
max-line-length = 99
exclude = __init__.py

[yapf]
ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = true
ALLOW_MULTILINE_LAMBDAS = true
BASED_ON_STYLE = pep8
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
COALESCE_BRACKETS = true
COLUMN_LIMIT = 99
CONTINUATION_INDENT_WIDTH = 4
; applies to function definitions as well!
; DEDENT_CLOSING_BRACKETS = false
SPACES_BEFORE_COMMENT = 2
SPLIT_BEFORE_FIRST_ARGUMENT = true
SPLIT_ARGUMENTS_WHEN_COMMA_TERMINATED = true
SPLIT_BEFORE_DICT_SET_GENERATOR = false
SPLIT_BEFORE_NAMED_ASSIGNS = false

[metadata]
description-file = README.md
