[bumpversion]
files = devtools/conda-recipe/meta.yaml setup.py docs/conf.py elaspic/__init__.py
current_version = 0.1.42.dev0
commit = False
tag = False
message = "Release {new_version}"
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize =
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
values =
	dev
	gamma

[aliases]
test = pytest

[pytest]
addopts =
	-sv --doctest-modules --cov=elaspic
	--ignore=setup.py --ignore=docs/conf.py
; python_files = tests/test_helper.py tests/test_pep8.py tests/test_structure_analysis.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[flake8]
ignore = D100,D101,D102,D103,D105,E402
max-line-length = 99
exclude = __init__.py

[metadata]
description-file = README.md
