[bumpversion]
files = devtools/conda-recipe/meta.yaml setup.py docs/conf.py elaspic/__init__.py
current_version = 0.1.43.dev0
commit = False
tag = False
message = "Release {new_version}"
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
values = 
	dev
	gamma

[aliases]
test = pytest

[pytest]
addopts = 
	-sv --cov=elaspic
	--ignore=setup.py --ignore=docs/conf.py
	--ignore=tests/test_database_pipeline.py --ignore=tests/test_standalone_pipeline.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[flake8]
ignore = D100,D101,D102,D103,D105,E402
max-line-length = 99
exclude = __init__.py

[metadata]
description-file = README.md

